--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -1,11 +1,5 @@
 @import '../partials/variables';
 
-@mixin buttons {
-    border: 1px solid $border;
-    background-color: none;
-    color: $font-color
-}
-
 @mixin tablet {  
     @media (min-width: $tablet-breakpoint) {
       @content;
@@ -16,4 +10,10 @@
     @media (min-width: $desktop-breakpoint) {
         @content;
     }
+}
+
+@mixin flex-header {
+  display: flex;
+  flex-direction: column;
+
 }
