--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -1,3 +1,5 @@
+@import './typography';
+
 $tablet-breakpoint: 48rem;
 $desktop-breakpoint: 80rem;
 
@@ -5,3 +7,6 @@ $main-background-color: #000;
 $secondary-background-color: #0c594a;
 $font-color: #fff;
 $border: #9e49ab;
+
+$comfortaa-font: 'Comfortaa','Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande';
+
