--- a/src/styles/partials/_typography.scss
+++ b/src/styles/partials/_typography.scss
@@ -1,5 +1,12 @@
 @font-face {
     font-family: 'Comfortaa';
-    src: url('../../assets/Comfortaa/Comfortaa-VariableFont_wght.ttf') format('woff2');
-  }
+    src: url('../../assets/fonts/Comfortaa/Comfortaa-VariableFont_wght.ttf')
+    format('woff2');
+}
+
+@font-face {
+    font-family: 'Roboto'; 
+    src: url(../../assets/fonts/Roboto_Mono/RobotoMono-VariableFont_wght.ttf)
+    format('woff2');
+}
 
