--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -5,8 +5,9 @@ $desktop-breakpoint: 80rem;
 
 $main-background-color: #000;
 $secondary-background-color: #0c594a;
-$font-color: #fff;
+$main-font-color: #fff;
+$secondary-font-color: #9fed93;
 $border: #9e49ab;
 
 $comfortaa-font: 'Comfortaa','Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande';
-
+$roboto-font: 'Roboto','Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande'
