added custom mouse

--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -25,6 +25,7 @@
             opacity: 50%;
         } &:hover {
             opacity: 90%;
+            box-shadow: 0 0 10px #ef10ff;
         }
     }
 
