--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -45,15 +45,14 @@
     &__nav-item {
         padding: 1rem 2rem;
         margin: .25rem;
-        transition: background-color 0.5s ease;
-        border: 3px solid transparent;
+        transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
         @include tablet {
             margin: 0 2rem;
             font-size: 1.5rem;
         } &:hover {
-            background-color: rgba(32, 109, 74, 0.565);
-            border: 3px solid $border;
             border-radius: 40px;
+            color: #fff;
+            box-shadow: inset 200px 0 0 0 rgb(20, 69, 47);
         }
     }
 }
