--- a/src/styles/partials/_global.scss
+++ b/src/styles/partials/_global.scss
@@ -1,3 +1,12 @@
+html {
+  --cursor-color: #333
+}
+
+html.dark-mode {
+  --cursor-color: #fff
+}
+
+
 * {
     margin: 0;
     padding: 0;
@@ -9,3 +18,4 @@ li {
     color: inherit;
     cursor: pointer;
 }
+
