--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -43,13 +43,15 @@
     }
 
     &__nav-item {
-        padding: 1rem 2rem;
+        padding: .5rem 1rem;
         margin: .25rem;
         transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
         @include tablet {
-            margin: 0 2rem;
+            margin: 0 1rem;
+            padding: 1rem 2rem;
             font-size: 1.5rem;
         } &:hover {
+            cursor: none;
             border-radius: 40px;
             color: #fff;
             box-shadow: inset 200px 0 0 0 rgb(20, 69, 47);
