--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -13,45 +13,12 @@
             flex-direction: row;
         }
 
-
-    &__img {
-        height: 100px;
-        border-radius: 50%;
-        opacity: 80%;
-        border: 2px solid $border;
-        padding: .5rem;
-        @include tablet {
-            height: 200px;
-            opacity: 70%;
-        } &:hover {
-            opacity: 90%;
-            box-shadow: 0 0 10px #ef10ff;
-        }
-    }
-
-    &__info {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-            @include tablet {
-                align-items: flex-start;
-            }
-            
-    }
-
-    &__name {
-        font-size: 1rem;
-        margin: .5rem;
-            @include tablet {
-                font-size: 3rem;
-            }
-    }
-
     &__title {
         font-size: .75rem;
         margin: 0 1rem;
             @include tablet {
-                font-size: 2rem;
+                font-size: 3rem;
+                line-height: 2rem;
             }
     }
 }
