--- a/src/styles/partials/_global.scss
+++ b/src/styles/partials/_global.scss
@@ -1,16 +1,25 @@
-html {
-  --cursor-color: #333
-}
-
-html.dark-mode {
-  --cursor-color: #fff
-}
-
+@import '../partials/variables';
+@import '../partials/mixins';
 
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-color: red;
+  &.light-theme {
+    @include light-theme;
   }
+
+  &.dark-theme {
+    @include dark-theme;
+  }
+  
+  color: var(--text-color);
+}
+
+
 
 li {
     text-decoration: none;
