--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -9,5 +9,11 @@ $main-font-color: #fff;
 $secondary-font-color: #9fed93;
 $border: #9e49ab;
 
+//light and dark mode
+$background-color-light: linear-gradient(to right, rgb(163, 215, 191) 10%, rgb(82, 161, 133) 100%);;
+$text-color-light: #000000;
+$background-color-dark: linear-gradient(to right, rgb(20, 69, 47) 10%, rgb(29, 46, 40) 100%);
+$text-color-dark: #ffffff;
+
 $comfortaa-font: 'Comfortaa','Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande';
 $roboto-font: 'Roboto','Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande'
