--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -19,4 +19,9 @@
                 line-height: 2rem;
             }
     }
+
+    &__button {
+        border: 1px solid $border;
+        background-color: none;
+    }
 }
