added data from json file and created dropdown menus

--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -10,7 +10,7 @@ $secondary-font-color: #9fed93;
 $border: #9e49ab;
 
 //light and dark mode
-$background-color-light: linear-gradient(to right, rgb(163, 215, 191) 10%, rgb(82, 161, 133) 100%);;
+$background-color-light: linear-gradient(to right, rgb(163, 215, 191) 10%, rgb(82, 161, 133) 100%);
 $text-color-light: #000000;
 $background-color-dark: linear-gradient(to right, rgb(20, 69, 47) 10%, rgb(29, 46, 40) 100%);
 $text-color-dark: #ffffff;
