updated theme colors

--- a/src/components/Name/Name.scss
+++ b/src/components/Name/Name.scss
@@ -5,10 +5,10 @@
 {
     background-image: linear-gradient(
     -225deg,
-    #231557 0%,
-    #107a30 29%,
-    #13ff2f 67%,
-    #fff800 100%
+    #100c0d 0%,
+    #013328 29%,
+    #cc8b65 67%,
+    #e3dcd2 100%
   );
     background-size: auto auto;
     background-clip: border-box;
