--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -26,7 +26,7 @@
     }
 
     &__subtitle {
-        border-bottom: .5px solid $border;
+        border-bottom: .5px solid $dark-fill-color;
         padding: .5rem 0;
             @include tablet {
                 border-bottom: none;
@@ -49,9 +49,7 @@
             padding: 1rem 2rem;
             font-size: 1.5rem;
         } &:hover {
-            cursor: none;
-            border-radius: 40px;
-            box-shadow: inset 200px 0 0 0 rgb(31, 126, 84);
+            @include button-hover;
         }
     }
 
@@ -61,7 +59,7 @@
     }
 
     &__theme-icon  {
-        fill: $border;
+        fill: $dark-fill-color;
         height: 20px;
         width: 20px;
         margin: 1rem;
