--- a/src/components/WorkExperience/WorkExperience.scss
+++ b/src/components/WorkExperience/WorkExperience.scss
@@ -14,7 +14,7 @@
     }
 
     &__button {
-        border: 2px solid $border;
+        border: 2px solid $dark-fill-color;
         border-radius: 40px;
         color: inherit;
         padding: .75rem;
@@ -25,9 +25,7 @@
                 font-size: 1.5rem;
                 padding: 1rem;
             }&:hover {
-            cursor: none;
-            border-radius: 40px;
-            box-shadow: inset 20rem 0 0 0 rgba(103, 19, 101, 0.516);
+                @include button-hover;
         }
     }
 
@@ -37,7 +35,7 @@
     }
 
     &__header {
-        background: linear-gradient(to right, rgb(158, 73, 171) 10%, rgb(84, 39, 91) 100%);
+        background-color: #cc8b65;        
         display: flex;
         flex-direction: row;
         align-items: center;
@@ -50,14 +48,14 @@
     }
 
     &__dropdown-icon {
-        fill: $border;
+        fill: $dark-fill-color;
         height: 50px;
         width: 50px;
     }
 
     &__education,
     &__experience,
-    &__interests {
+    &__skills {
         font-size: 1rem;
             @include tablet {
                 font-size: 2rem;
@@ -67,5 +65,9 @@
 
     &__list-item {
         margin: 1rem;
+            @include tablet {
+                font-size: 2rem;
+                line-height: 6rem;
+            }
     }
 }
