moved download resume button

--- a/src/components/WorkExperience/WorkExperience.scss
+++ b/src/components/WorkExperience/WorkExperience.scss
@@ -4,6 +4,17 @@
 .work {
     font-family: $roboto-font;
 
+    &__button-section {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+            @include tablet {
+                flex-direction: row;
+                align-items: center;
+                justify-content: space-between;
+            }
+    }
+
     &__title {
         font-size: 1.75rem;
         margin: 1rem;
@@ -18,8 +29,9 @@
         border-radius: 40px;
         color: inherit;
         padding: .75rem;
-        margin: 2rem;
+        margin: 1rem;
         text-decoration: none;
+        text-align: center;
         transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
             @include tablet {
                 font-size: 1.5rem;
@@ -29,7 +41,7 @@
         }
     }
 
-    &__section {
+    &__main-section {
         margin: 1.25rem;
         text-wrap: wrap;
     }
@@ -42,9 +54,6 @@
         justify-content: space-between;
         margin: .25rem 0;
         padding: 0 1rem;
-            @include tablet {
-              
-            }
     }
 
     &__dropdown-icon {
@@ -62,12 +71,13 @@
             }
 
     }
-
+    
+    &__details-list,
     &__list-item {
         margin: 1rem;
             @include tablet {
+                margin: 2rem 1rem;
                 font-size: 2rem;
-                line-height: 6rem;
             }
     }
 }
