--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -23,6 +23,9 @@
     &__title {
         font-size: 2rem;
         margin: 1rem;
+            @include tablet {
+                font-size: 4rem;
+            }
     }
 
     &__subtitle {
