--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -6,17 +6,43 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 1rem;
         @include tablet {
-            flex-direction: row;
+            align-items: flex-start;
+        }
+
+        &__name-title {
+            display: flex;
+            flex-direction: column;
+                @include tablet {
+                    flex-direction: row;
+                    align-items: center;
+                }
         }
 
     &__title {
-        font-size: .75rem;
+        font-size: 2rem;
         margin: 0 1rem;
             @include tablet {
-                font-size: 3rem;
-                line-height: 2rem;
+                font-size: 4rem;
+                line-height: 2.5rem;
+                max-width: 30rem;
+            }
+    }
+
+    &__title-background {
+        font-size: 1.25rem;
+        margin: 6rem 0 0 1rem;
+            @include tablet{
+                font-size: 2rem;
+            }
+    }
+
+    &__info {
+        margin: 2rem;
+        line-height: 2rem;
+            @include tablet {
+                font-size: 1.5rem;
+                line-height: 3rem;
             }
     }
 }
