--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -20,7 +20,7 @@
         }
     }
 
-    &__title {
+    &__title title {
         font-size: 2rem;
         margin: 1rem;
             @include tablet {
