--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -8,24 +8,18 @@
     align-items: center;
         @include tablet {
             align-items: flex-start;
+            margin: 8rem 1rem;
         }
 
-        &__name-title {
-            display: flex;
-            flex-direction: column;
-                @include tablet {
-                    flex-direction: row;
-                    align-items: center;
-                }
-        }
-
-    &__title {
+    &__name-title {
+        font-family: $roboto-font;
         font-size: 2rem;
-        margin: 0 1rem;
+        display: flex;
+        flex-direction: column;
             @include tablet {
-                font-size: 4rem;
-                line-height: 2.5rem;
-                max-width: 30rem;
+                font: 4rem;
+                flex-direction: row;
+                align-items: center;
             }
     }
 
@@ -38,6 +32,7 @@
     }
 
     &__info {
+        font-family: $comfortaa-font;
         margin: 2rem;
         line-height: 2rem;
             @include tablet {
