created social media section

--- a/src/components/SocialMedia/SocialMedia.scss
+++ b/src/components/SocialMedia/SocialMedia.scss
@@ -2,7 +2,33 @@
 @import '../../styles/partials/_mixins';
 
 .social-media {
-    font: $roboto-font;
+    font-family: $roboto-font;
 
+    &__list {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        font-size: 2rem;
+            @include tablet {
+                flex-direction: row;
+                font-size: 3rem;
+            }
+    }
+
+    &__list-item {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        font-size: 1rem;
+        text-align: center;
+            @include tablet {
+                font-size: 2rem;
     
+            }
+    }
+
+    &__svg {
+        color: $light-fill-color;
+    }
+
 }
