--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,7 +3,7 @@
 
 .header {
     font-family: $comfortaa-font;
-    @include flex-header;
+    @include flex-column;
     align-items: center;
     justify-content: space-between;
     @include tablet {
@@ -12,7 +12,7 @@
     }
 
     &__info {
-        @include flex-header;
+        @include flex-column;
         align-items: center;
         @include tablet {
             flex-direction: row;
@@ -37,7 +37,8 @@
     }
 
     &__nav-list {
-       @include flex-header;
+       @include flex-column;
+        padding: 0;
         @include tablet {
             flex-direction: row;
         }
