--- a/src/components/SocialMedia/SocialMedia.scss
+++ b/src/components/SocialMedia/SocialMedia.scss
@@ -5,30 +5,34 @@
     font-family: $roboto-font;
 
     &__list {
-        display: flex;
-        flex-direction: column;
+       @include flex-column;
         align-items: center;
-        font-size: 2rem;
+        padding: 0;
             @include tablet {
                 flex-direction: row;
+                justify-content: space-evenly;;
                 font-size: 3rem;
             }
     }
 
     &__list-item {
-        display: flex;
-        flex-direction: column;
+        @include flex-column;
         align-items: center;
         font-size: 1rem;
         text-align: center;
+        max-width: 20rem;
+        margin: 1rem 0;
+        border: transparent;
+        border-radius: 10px;
+        padding: .5rem; 
             @include tablet {
                 font-size: 2rem;
-    
+            } &:hover {
+                transform: scale(1.1);
+                box-shadow: 0 0 10px $light-fill-color;
+                border-radius: 10px;
             }
     }
-
-    &__svg {
-        color: $light-fill-color;
-    }
+    
 
 }
