--- a/src/components/SocialMedia/SocialMedia.scss
+++ b/src/components/SocialMedia/SocialMedia.scss
@@ -10,9 +10,19 @@
         padding: 0;
             @include tablet {
                 flex-direction: row;
-                justify-content: space-evenly;;
+                justify-content: space-between;
                 font-size: 3rem;
             }
+    }
+
+    &__link {
+        height: 45px;
+            @include tablet {
+            height: 125px;
+                @include desktop {
+                    height: 100px;
+                }
+        } 
     }
 
     &__list-item {
@@ -21,7 +31,7 @@
         font-size: 1rem;
         text-align: center;
         max-width: 20rem;
-        margin: 1rem 0;
+        margin: 2rem 1rem;
         border: transparent;
         border-radius: 10px;
         padding: .5rem; 
