--- a/src/components/WorkExperience/WorkExperience.scss
+++ b/src/components/WorkExperience/WorkExperience.scss
@@ -8,8 +8,7 @@
         }
 
     &__button-section {
-        display: flex;
-        flex-direction: column;
+        @include flex-column;
         justify-content: flex-start;
             @include tablet {
                 flex-direction: row;
@@ -48,8 +47,9 @@
         flex-direction: row;
         align-items: center;
         justify-content: space-between;
-        margin: .25rem 0;
+        margin: .5rem 0;
         padding: 0 1rem;
+        height: 50px;
     }
 
     &__dropdown-icon {
