--- a/src/components/WorkExperience/WorkExperience.scss
+++ b/src/components/WorkExperience/WorkExperience.scss
@@ -31,7 +31,7 @@
                 font-size: 1.5rem;
                 padding: 1rem;
             }&:hover {
-                @include button-hover;
+                @include button-hover-1;
         }
     }
 
