--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -6,9 +6,11 @@
 
     &__list {
         @include flex-column;
+        align-items: center;
             @include tablet {
                 flex-direction: row;
                 flex-wrap: wrap;
+                justify-content: space-evenly;
             }
     }
  
@@ -32,7 +34,7 @@
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-        justify-content: space-around;
+        justify-content: space-evenly;
     } 
 
     &__tech-stack-item {
@@ -43,8 +45,8 @@
         border-radius: 30px;
             @include tablet {
                 padding: 1rem;
-                margin: 1rem;
-                font-size: .75rem;
+                margin: .5rem;
+                font-size: 1rem;
             } 
 
     }
