--- a/src/components/ContactForm/ContactForm.scss
+++ b/src/components/ContactForm/ContactForm.scss
@@ -4,14 +4,13 @@
 .contact {
     display: flex;
     flex-direction: column-reverse;
-    background-color: white;
-    max-width: 90vw;
+    background-color: rgba(213, 138, 138, 0.255);
     margin: 4rem auto;
     padding: 1rem;
+    width: 100vw;
         @include tablet {
             margin: 8rem 0;
             flex-direction: row;
-            max-width: 80vw;
         }
     
     &__form {
