--- a/src/components/Name/Name.scss
+++ b/src/components/Name/Name.scss
@@ -2,9 +2,12 @@
 @import '../../styles/partials/mixins';
 
 .container {
-  max-width: 1000px;
+  max-width: 30vw;
     @include tablet {
       margin-left: 8rem;
+        @include desktop {
+          max-width: 60vw;
+        }
     }
 }
 
@@ -29,6 +32,9 @@
         @include tablet {
             font-size: 12rem;
             margin: 0 0 12rem 0;
+              @include desktop {
+                margin: 4rem 14rem;
+              }
         }
 }
 
