--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -23,6 +23,13 @@
             }
     }
 
+    &__background {
+        margin: 2rem 1rem;
+            @include tablet {
+                margin: 4rem 2rem;
+            }
+    }
+
     &__title-background {
         font-size: 1.25rem;
         margin: 6rem 0 0 1rem;
@@ -38,6 +45,8 @@
             @include tablet {
                 font-size: 1.5rem;
                 line-height: 3rem;
+                max-width: 90vw;
+                margin: 3rem;
             }
     }
 }
