--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -2,7 +2,17 @@
 @import '../../styles/partials/_mixins';
 
 .projects {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     font-family: $roboto-font;
+        @include tablet {
+            flex-direction: row;
+            margin: 2rem;
+                @include desktop {
+                    margin: 8rem 2rem;
+                }
+        }
 
     &__list {
         @include flex-column;
@@ -15,12 +25,16 @@
     }
  
     &__list-items {
-        padding: 1rem;
+        padding: 2rem;
         margin: 1rem;
         max-width: 20rem;
         border: 1px solid;
+        height: 60vh;
+        width: 60vw;
             @include tablet {
                 max-width: 30rem;
+                height: 40vh;
+                 width: 40vw;
             } &:hover {
                 @include button-hover-2;
             }
@@ -41,7 +55,7 @@
         border: 2px solid;
         padding: .5rem;
         margin: .5rem;
-        font-size: .5rem;
+        font-size: .75rem;
         border-radius: 30px;
             @include tablet {
                 padding: 1rem;
