--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -14,6 +14,15 @@
                 }
         }
 
+    &__blurb {
+        @include tablet {
+            font-size: 1.5rem;
+            margin: 4rem;
+            max-width: 70vw;
+            
+        }
+    }
+
     &__list {
         @include flex-column;
         align-items: center;
