--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -1,6 +1,16 @@
 @import '../../styles/partials/variables';
 @import '../../styles/partials/mixins';
 
+.light-theme .profile__background {
+    background-color: $light-fill-color; 
+    color: $background-color-dark; 
+}
+  
+.dark-theme .profile__background {
+    background-color: $dark-fill-color; 
+    color: $background-color-light;
+}
+
 .profile {
     font-family: $roboto-font;
     display: flex;
@@ -8,7 +18,6 @@
     align-items: center;
         @include tablet {
             align-items: flex-start;
-            margin: 8rem 1rem;
         }
 
     &__name-title {
@@ -24,9 +33,10 @@
     }
 
     &__background {
-        margin: 2rem 1rem;
+        margin: 0;
+        padding: 2rem 1rem;
             @include tablet {
-                margin: 4rem 2rem;
+                padding: 4rem 2rem;
             }
     }
 
@@ -45,7 +55,6 @@
             @include tablet {
                 font-size: 1.5rem;
                 line-height: 3rem;
-                max-width: 90vw;
                 margin: 3rem;
             }
     }
