added new features to the header and contact form

--- a/src/components/ContactForm/ContactForm.scss
+++ b/src/components/ContactForm/ContactForm.scss
@@ -89,3 +89,11 @@
 
     }
 }
+
+input[type="text"]::placeholder,
+input[name="email"]::placeholder,
+textarea::placeholder {
+    color: white;
+}
+
+
