--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -15,14 +15,30 @@
     @include flex-column;
     align-items: center;
     justify-content: space-between;
+    position: sticky;
+    top: 0;
+    z-index: 10;
+    backdrop-filter: blur(10px);
+    width: 100vw;
         @include tablet {
             flex-direction: row;
             height: 100px;
-            position: sticky;
-            top: 0;
-            z-index: 10;
-            backdrop-filter: blur(10px);
         }
+
+    &__toggle-menu {
+        border: none;
+        background-color: transparent;
+        padding: .5rem 1rem;
+        margin: .25rem;
+        transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
+        @include tablet {
+            margin: 0 1rem;
+            padding: 1rem 2rem;
+            font-size: 1.5rem;
+        } &:hover {
+            @include button-hover-1;
+        }
+    }
 
     &__info {
         @include flex-column;
