--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -16,6 +16,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100vw;
         @include tablet {
             align-items: flex-start;
         }
@@ -59,3 +60,4 @@
             }
     }
 }
+
