--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -62,7 +62,10 @@
         font-size: 2rem;
         margin: 1rem;
             @include tablet {
-                font-size: 4rem;
+                font-size: 2rem;
+                    @include desktop {
+                        font-size: 4rem;
+                    }
             }
     }
 
@@ -88,8 +91,12 @@
         width: 20px;
         margin: 1rem;
             @include tablet {
-                height: 80px;
-                width: 80px;
+                height: 60px;
+                width: 60px;
+                    @include desktop {
+                        height: 80px;
+                        width: 80px
+                    }
             }
     }
 }
