--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -27,9 +27,11 @@
         display: flex;
         flex-direction: column;
             @include tablet {
-                font: 4rem;
-                flex-direction: row;
+                font-size: 2rem;
                 align-items: center;
+                    @include desktop {
+                        flex-direction: row;
+                    }
             }
     }
 
