--- a/src/components/Name/Name.scss
+++ b/src/components/Name/Name.scss
@@ -7,7 +7,7 @@
       margin-left: 8rem;
       max-width: 80vw;
         @include desktop {
-          max-width: 60vw;
+          max-width: 80vw;
         }
     }
 }
@@ -34,7 +34,7 @@
             font-size: 10rem;
             margin: 0 0 12rem 0;
               @include desktop {
-                margin: 4rem 14rem;
+                margin: 2rem;
               }
         }
 }
