--- a/src/components/WorkExperience/WorkExperience.scss
+++ b/src/components/WorkExperience/WorkExperience.scss
@@ -2,12 +2,12 @@
 @import '../../styles/partials/_mixins';
 
 .light-theme .work__header {
-    background-color: $light-fill-color; 
+    border: 2px solid $light-fill-color; 
     color: $background-color-dark; 
 }
   
-.dark-theme .work__header {
-    background-color: $dark-fill-color; 
+.dark-theme .work__header { 
+    border: 2px solid $dark-fill-color;
     color: $background-color-light;
 }
 
@@ -57,6 +57,7 @@
         margin: .5rem 0;
         padding: 0 1rem;
         height: 50px;
+        border-radius: 40px;
     }
 
     &__dropdown-icon {
