--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -45,7 +45,8 @@
 }
 
 @mixin form-border {
-  border: none;
+  border: 2px solid black;
+  border-radius: 40px;
   background-color: transparent;
   border-bottom: 3px solid; 
 }
