--- a/src/components/Name/Name.scss
+++ b/src/components/Name/Name.scss
@@ -29,11 +29,14 @@
     -webkit-text-fill-color: transparent;
     animation: textclip 4s linear infinite;
     display: inline-block;
-    font-size: 5rem;
+    font-size: 2rem;
+    text-align: center;
         @include tablet {
-            font-size: 10rem;
+            font-size: 5rem;
             margin: 0 0 12rem 0;
+            text-align: left;
               @include desktop {
+                font-size: 8;
                 margin: 2rem;
               }
         }
