--- a/src/components/ContactForm/ContactForm.scss
+++ b/src/components/ContactForm/ContactForm.scss
@@ -12,8 +12,6 @@
 }
 
 .contact {
-    display: flex;
-    flex-direction: column-reverse;
     padding: 2rem;
         @include tablet {
             padding: 2rem;
@@ -23,45 +21,66 @@
                     padding: 4rem; 
                 }
         }
-    
-    &__form {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin: 2rem;
-            @include tablet {
-                align-items: flex-start;
-                margin: 4rem;
-            }
-        }
 
     &__title {
         font-family: $roboto-font;
         margin: 0;
     }
 
+    &__main-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+            @include desktop {
+                flex-direction: row;
+            }
+    }
+
+    &__thank-you {
+        font-family: $comfortaa-font;
+        margin: 1rem;
+        text-align: center;
+            @include tablet {
+                padding: 1rem 4rem;
+                margin: 0;
+                font-size: 1.5rem;
+                max-width: 35rem;
+            }
+
+        }
+
+    &__img {
+        width: 250px;
+        margin: 1rem;
+            @include tablet {
+                width: 350px;       
+            }
+        }
+
     &__name,
     &__email {
         margin: 1rem;
-        padding: 1rem 10rem 1rem 1rem;
+        padding: 1rem;
         @include form-border;
             @include tablet {
                 font-size: 1.5rem;
+                padding: 2rem
             }
     }
 
     &__message {
         margin: 1rem;
-        padding: 10rem 10rem 1rem 1rem;
+        padding: 1rem;
+        overflow: auto;
         @include form-border;
             @include tablet {
                 font-size: 1.5rem;
-                height: 30px;
+                padding: 2rem;
             }
         }
 
     &__button {
-        border-radius: 50px;
+        border-radius: 1000px;
         padding: 1rem;
         margin: 1rem;
         border: none;
@@ -80,25 +99,24 @@
                 margin: 4rem;
             }
         }
-
-    &__thank-you {
-        font-family: $comfortaa-font;
-        margin: 1rem;
-        text-align: center;
-            @include tablet {
-                padding: 1rem 4rem;
-                margin: 0;
-                font-size: 1.5rem;
-                max-width: 35rem;
-            }
-
+        
+        &__form-div {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+                @include desktop {
+                    align-items: flex-start;
+                }
         }
-
-    &__img {
-        width: 20rem;
-        margin: 1rem;
+    
+    &__form {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 2rem;
             @include tablet {
-                width: 30rem;       
+                align-items: flex-start;
+                margin: 4rem;
             }
         }
 }
