--- a/src/components/Name/Name.scss
+++ b/src/components/Name/Name.scss
@@ -2,7 +2,7 @@
 @import '../../styles/partials/mixins';
 
 .container {
-  max-width: 30vw;
+  max-width: 50vw;
     @include tablet {
       margin-left: 8rem;
       max-width: 80vw;
@@ -33,10 +33,9 @@
     text-align: center;
         @include tablet {
             font-size: 5rem;
-            margin: 0 0 12rem 0;
             text-align: left;
               @include desktop {
-                font-size: 8;
+                font-size: 4rem;
                 margin: 2rem;
               }
         }
