--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -16,19 +16,15 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100vw;
         @include tablet {
             align-items: flex-start;
         }
 
     &__name-title {
         font-family: $roboto-font;
-        font-size: 2rem;
-        display: flex;
-        flex-direction: column;
+        font-size: 1rem;
             @include tablet {
                 font-size: 2rem;
-                align-items: center;
                     @include desktop {
                         flex-direction: row;
                     }
@@ -62,8 +58,14 @@
     }
 
     &__img {
-        height: 25rem;
-        margin: 0 auto;
+       height: 200px;
+        @include tablet {
+            height: 300px;
+                @include desktop {
+                    height: 400px;
+                }   
+        }
+         
     }
 
     &__info {
